docs: clear messages; units rem; add ul[role="list"] | fix: font h1 and nav; gap main

--- a/01-Nivel/09-Desafio-Responsividade/responsive_from_base/01-Desafio-Perfil_de_Viagens/styles/header.css
+++ b/01-Nivel/09-Desafio-Responsividade/responsive_from_base/01-Desafio-Perfil_de_Viagens/styles/header.css
@@ -1,62 +1,41 @@
-/* header {
-    flex-direction: column;
-} */
-
-#profile {
-    /* display: flex;
-    gap: 32px;
-    align-items: center; */
-    font: var(--text-sm);
-    /* flex-direction: column; */
-}
-
-#profile-info h1 {
-    font: var(--text-lg);
-    color: var(--text-color-primary);
-    /* margin-bottom: 8px; */
-}
-
-#profile-info {
-    max-width: 296px;
-}
-
 #profile img {
-    width: 120px;
-    height: 120px;
+    width: 7.5rem;
+    height: 7.5rem;
     object-fit: cover;
     border-radius: 50%;
 }
 
+#profile-info {
+    max-width: 18.5rem;
+}
+
 #info ul {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* gap: 16px; */
-    width: 280px;
+    width: 17.5rem;
 }
 
 #info li {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: .5rem;
 }
 
-@media (width >= 80em) {
+@media (width >= 80rem) {
     header {
         justify-content: space-between;
         align-items: center;
     }
 
     #profile {
-        gap: 32px;
+        gap: 2rem;
         align-items: center;
     }
     
     #profile img {
-        width: 176px;
-        height: 176px;
+        width: 11rem;
+        height: 11rem;
     }
 
     #profile-info {
-        max-width: 384px;
+        max-width: 24rem;
     }
 }
